--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -16,6 +16,15 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v2
 
+    - name: Print working directory
+      run: pwd
+
+    - name: List files
+      run: ls -la
+
+    - name: Print GITHUB_WORKSPACE
+      run: echo $GITHUB_WORKSPACE
+      
     - name: Set up Terraform
       uses: hashicorp/setup-terraform@v1
       with:
