--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -37,6 +37,7 @@ jobs:
            
     - name: Terraform Init
       run: terraform init
+      working-directory: /home/runner/work/terraform1/terraform1
 
     - name: Terraform Plan
       run: terraform plan -out=tfplan
