--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -36,6 +36,11 @@ jobs:
         creds: ${{ secrets.AZURE_CREDENTIALS }}
            
     - name: Terraform Init
+      env:
+        ARM_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
+        ARM_CLIENT_SECRET: ${{ secrets.AZURE_CLIENT_SECRET }}
+        ARM_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
+        ARM_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
       run: terraform init
       working-directory: /home/runner/work/terraform1/terraform1/terraform
 
