--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -45,6 +45,11 @@ jobs:
       working-directory: /home/runner/work/terraform1/terraform1/terraform
 
     - name: Terraform Plan
+      env:
+        ARM_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
+        ARM_CLIENT_SECRET: ${{ secrets.AZURE_CLIENT_SECRET }}
+        ARM_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
+        ARM_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
       run: terraform plan -out=tfplan
       working-directory: /home/runner/work/terraform1/terraform1/terraform
 
