--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -54,6 +54,11 @@ jobs:
       working-directory: /home/runner/work/terraform1/terraform1/terraform
 
     - name: Terraform Apply
+      env:
+        ARM_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
+        ARM_CLIENT_SECRET: ${{ secrets.AZURE_CLIENT_SECRET }}
+        ARM_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
+        ARM_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
       if: github.ref == 'refs/heads/main'
       run: terraform apply -auto-approve tfplan
       working-directory: /home/runner/work/terraform1/terraform1/terraform
