--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -41,7 +41,7 @@ jobs:
         creds: ${{ secrets.AZURE_CREDENTIALS }}
            
     - name: Terraform Init
-      run: terraform init
+      run: terraform init -backend-config=backend.tfvars
       working-directory: /home/runner/work/terraform1/terraform1/terraform
 
     - name: Terraform Plan
