--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -74,7 +74,7 @@ jobs:
           EOF
           
     - name: List files in terraform directory
-      run: ls -la /home/runner/work/terraform1/terraform1/.github
+      run: ls -la /home/runner/work/terraform1/terraform1/.github/workflows
           
     - name: Terraform Init
       run: terraform init
