--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -62,7 +62,7 @@ jobs:
 
     - name: Generate backend configuration
       run: |
-       cat > backend.tf <<EOF
+       cat > /home/runner/work/terraform1/terraform1/terraform/backend.tf <<EOF
        terraform {
           backend "azurerm" {
             resource_group_name ="rg-dev-app-001"
