--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -73,7 +73,7 @@ jobs:
       run: ls -la /home/runner/work/terraform1/terraform1/.github/workflows
           
     - name: Terraform Init
-      run: terraform init -backend-config=/home/runner/work/terraform1/terraform1/terraform/backend.tf
+      run: terraform init
       working-directory: /home/runner/work/terraform1/terraform1/terraform
 
     - name: Terraform Plan
