--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -68,7 +68,7 @@ jobs:
             resource_group_name = "rg-dev-app-001"
             storage_account_name = "proddevops2025"
             container_name = "production"
-            key = "${{ steps.read_tfvars.outputs.value }.tfstate}"
+            key = "${{ steps.read_tfvars.outputs.value }}.tfstate"
          } 
        } 
        EOF
