--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -64,10 +64,10 @@ jobs:
       run: |
        cat > /home/runner/work/terraform1/terraform1/terraform/provider.tf <<EOF
        provider "azurerm" {
-            client_id = ${{ secrets.AZURE_CLIENT_ID }}
-            client_secret = ${{ secrets.AZURE_CLIENT_SECRET }}
-            tenant_id = ${{ secrets.AZURE_TENANT_ID }}
-            subscription_id = ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+            client_id = "${{ secrets.AZURE_CLIENT_ID }}"
+            client_secret = "${{ secrets.AZURE_CLIENT_SECRET }}"
+            tenant_id = "${{ secrets.AZURE_TENANT_ID }}"
+            subscription_id = "${{ secrets.AZURE_SUBSCRIPTION_ID }}"
          } 
        } 
        EOF
