--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -72,10 +72,11 @@ jobs:
         }
        }
        provider "azurerm" {
-            client_id = "${{ secrets.AZURE_CLIENT_ID }}"
-            client_secret = "${{ secrets.AZURE_CLIENT_SECRET }}"
-            tenant_id = "${{ secrets.AZURE_TENANT_ID }}"
-            subscription_id = "${{ secrets.AZURE_SUBSCRIPTION_ID }}"
+         features {}
+         client_id = "${{ secrets.AZURE_CLIENT_ID }}"
+         client_secret = "${{ secrets.AZURE_CLIENT_SECRET }}"
+         tenant_id = "${{ secrets.AZURE_TENANT_ID }}"
+         subscription_id = "${{ secrets.AZURE_SUBSCRIPTION_ID }}"
          } 
        } 
        EOF
