--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -59,27 +59,6 @@ jobs:
       uses: azure/login@v2
       with:
         creds: ${{ secrets.AZURE_CREDENTIALS }}
-  
-    - name: Generate provider configuration
-      run: |
-       cat > /home/runner/work/terraform1/terraform1/terraform/provider.tf <<EOF
-       terraform {
-       required_providers {
-       azurerm = {
-       source = "hashicorp/azurerm"
-       version = "4.6.0"
-          }
-        }
-       }
-       provider "azurerm" {
-         features {}
-         client_id = "${{ secrets.AZURE_CLIENT_ID }}"
-         client_secret = "${{ secrets.AZURE_CLIENT_SECRET }}"
-         tenant_id = "${{ secrets.AZURE_TENANT_ID }}"
-         subscription_id = "${{ secrets.AZURE_SUBSCRIPTION_ID }}"
-         } 
-       } 
-       EOF
 
     - name: Generate backend configuration
       run: |
@@ -98,6 +77,11 @@ jobs:
       run: ls -la /home/runner/work/terraform1/terraform1/.github/workflows
           
     - name: Terraform Init
+      env:
+        ARM_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
+        ARM_CLIENT_SECRET: ${{ secrets.AZURE_CLIENT_SECRET }}
+        ARM_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
+        ARM_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
       run: terraform init
       working-directory: /home/runner/work/terraform1/terraform1/terraform
 
