--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -65,10 +65,10 @@ jobs:
        cat > /home/runner/work/terraform1/terraform1/terraform/backend.tf <<EOF
        terraform {
          backend "azurerm" {
-            resource_group_name = "rg-dev-app-001"
-            storage_account_name = "proddevops2025"
-            container_name = "production"
-            key = "${{ steps.read_tfvars.outputs.value }}.tfstate"
+            resource_group_name = "${{ secrets.AZURE_RESOURCE_GROUP }}"
+            storage_account_name = "${{ secrets.AZURE_STORAGE_ACCOUNT_NAME }}"
+            container_name = "${{ secrets.AZURE_CONTAINER_NAME }}"
+            key = "${{ secrets.AZURE_AZURE_KEY }}".tfstate
          } 
        } 
        EOF
